tests/good/tests/bad/testExplicitWidthTooSmallString.grc
// Error: Literal "TooLong" length 7 > declared width 5
s: string(5) = "TooLong"
